--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   db:
     container_name: xapo-db
     image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     env_file:
       - .env
     ports:
@@ -19,7 +20,7 @@ services:
     env_file:
       - .env
     environment:
-      FLASK_APP: app.py
+      FLASK_APP: main.py
     command: flask run --host=0.0.0.0
     ports:
       - 5000:5000
