--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Flask==1.1.2
 flask-restful==0.3.8
+python-dotenv==0.15.0
+mysqlclient==2.0.1
 Flask-SQLAlchemy==2.4.4
+Flask-Migrate==2.5.3
+flask-marshmallow==0.14.0
+marshmallow-sqlalchemy==0.24.0
+simplejson==3.17.2
 pytest==6.1.2
