--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - db
     env_file:
       - .env
+      - .secret
     environment:
       FLASK_APP: main.py
     command: flask run --host=0.0.0.0
