Integrate with OER, fix decimals and add index.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - .env
       - .secret
     environment:
+      FLASK_ENV: 'development'
+      FLASK_DEBUG: 'True'
       FLASK_APP: main.py
     command: flask run --host=0.0.0.0
     ports:
