--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ flask-marshmallow==0.14.0
 marshmallow-sqlalchemy==0.24.0
 simplejson==3.17.2
 requests==2.25.0
+black==20.8b1
+isort==5.6.4
 pytest==6.1.2
