Setup pytest with db.

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,6 @@ known_first_party = app,main.py
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,FLASK,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 use_parentheses=True
+
+[tool:pytest]
+mocked-sessions=app.db.db.session
