--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,32 +1,34 @@
 version: '3.4'
 
 services:
-  db:
-    container_name: xapo-db
+  test-db:
+    container_name: xapo-test-db
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     env_file:
       - .env
+    environment:
+      MYSQL_DATABASE: 'test'
     ports:
-      - 3306:3306
-    volumes:
-      - ./shared/mysql:/var/lib/mysql
+      - 3307:3306
 
-  app:
-    container_name: xapo-app
+  test:
+    container_name: xapo-test-app
     build: .
     depends_on:
-      - db
+      - test-db
     env_file:
       - .env
       - .secret
     environment:
-      ENVIRONMENT: 'dev'
+      MYSQL_HOST: 'test-db'
+      MYSQL_DATABASE: 'test'
+      ENVIRONMENT: 'test'
       FLASK_ENV: 'development'
       FLASK_DEBUG: 'True'
       FLASK_APP: main.py
     command: flask run --host=0.0.0.0
     ports:
-      - 5000:5000
+      - 5001:5000
     volumes:
       - .:/app
